feat: create authorities for user role