@@ -1,12 +1,16 @@
-package pl.bartoszmech.infrastructure.auth;
+package pl.bartoszmech.infrastructure.auth.userdetails;
 
 import lombok.AllArgsConstructor;
+import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import pl.bartoszmech.domain.accountidentifier.AccountIdentifierFacade;
 import pl.bartoszmech.domain.accountidentifier.dto.UserDto;
 
 import java.util.Collections;
+import java.util.List;
 
 @AllArgsConstructor
 public class UserDetailsService implements org.springframework.security.core.userdetails.UserDetailsService {
@@ -23,6 +27,6 @@ public class UserDetailsService implements org.springframework.security.core.use
         return new org.springframework.security.core.userdetails.User(
                 user.email(),
                 user.password(),
-                Collections.emptyList());
+                List.of(new SimpleGrantedAuthority(user.role().getRoleName())));
     }
 }
